Updated Front End Tests

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,4 +1,5 @@
-frontend:
+<title>{{title}}</title>
+<h1>Welcome to frontend!</h1>
 <ol>
   <li>create new service called 'api'</li>
   <li>add 1 method to service to get the contacts from the api located at 'http://localhost:4201/heroes'</li>
