Removed 'table-striped' class from a table

--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -10,7 +10,7 @@
       </ul>
     </div>
 
-      <table class="table table-striped table-hover">
+      <table class="table table-hover">
         <thead>
           <th>#</th>
           <th> Name </th>
@@ -31,7 +31,7 @@
         </tr>
       
         <ng-container *ngIf="hero.expanded">
-          <tr>
+          <tr class="container-stats">
             <td colspan="4">
               <h5 class="heading">Hero Stats</h5>
               <ul>
