--- a/FrontEnd/src/app/list/list.component.scss
+++ b/FrontEnd/src/app/list/list.component.scss
@@ -34,3 +34,7 @@
   --bs-table-accent-bg: var(--bs-table-striped-bg);
   color: #fff !important
 }
+
+.container-stats {
+  color: black !important;
+}
