1. Added IHero interface. 2. Added evolve in C# project. 3. evolve post works for C# project. 4. Created a service 'api' for Angular project. 5. 'api' service can get contacts from C# API. 6. Created a component 'list' for Angular project. 7. Added a table to view contacts from the API to display on the frontend in Angular project. 8. CSS File updated as per specification.

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -8,3 +8,5 @@ frontend:
   <li>There should be a heading (h2) with the title 'Tour of Heroes'.</li>
 </ol>
 <router-outlet></router-outlet>
+
+<app-list></app-list> <!-- List Component Load -->
