--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -7,20 +7,20 @@
     text-align: center;
 }
 
-.strength{
+.color1{
     font-weight: 100;
     color: yellow;
     background-color: black;
 }
 
-.intelligence{
-    font-weight: 100;
+.color2{
+    font-weight: 150;
     color: blue;
     background-color: gray;
 }
 
-.stamina{
-    font-weight: 100;
+.color3{
+    font-weight: 200;
     color: red;
     background-color: slategray;
 }
