--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,12 +1,47 @@
 frontend:
 <ol>
-  <li>create new service called 'api'</li>
-  <li>add 1 method to service to get the contacts from the api located at 'http://localhost:4201/heroes'</li>
-  <li>create new component named 'list'</li>
-  <li>in the component, add the api service and get the list of contacts.</li>
-  <li>display the list on the frontend.</li>
-  <li>There should be a heading (h2) with the title 'Tour of Heroes'.</li>
+  <li style="text-decoration: line-through;">create new service called 'api'</li>
+  <li style="text-decoration: line-through;">add 1 method to service to get the contacts from the api located at 'http://localhost:4201/heroes'</li>
+  <li style="text-decoration: line-through;">create new component named 'list'</li>
+  <li style="text-decoration: line-through;">in the component, add the api service and get the list of contacts.</li>
+  <li style="text-decoration: line-through;">display the list on the frontend.</li>
+  <li style="text-decoration: line-through;">There should be a heading (h2) with the title 'Tour of Heroes'.</li>
 </ol>
+
+Lack of using angular, resulted in:
+<ol>
+  <li> 
+    <p>
+      when the button is clicked, it should post the hero name and action to the relevant endpoint -
+      Could not figure out in time how to post the 'evolve' command to reflect the new data in the table.
+   </p>
+  </li>
+  <li> 
+    <p>
+     Font-weight does not want to change, did not continue with this, for the sake if time.
+   </p>
+  </li>
+</ol>
+
+End result:
+<ol>
+  <li> 
+    <p>
+        FrontEnd can receive and display data from the C# API.
+   </p>
+  </li>
+  <li> 
+    <p>
+        Implemented api service, and list component.
+   </p>
+  </li>
+  <li> 
+    <p>
+        Background and foreground color can randomize on each row, did not create a randomizer for each CSS class (Time constraint).
+   </p>
+  </li>
+</ol>
+
 <router-outlet></router-outlet>
 
 <app-list></app-list> <!-- List Component Load -->
