--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -4,8 +4,12 @@
   <h2 class="heading">Tour Of Heroes</h2>
   <body>
     <div class="container mt-5">
-
-      <table class="table table-striped" id="heroTable">
+      <table class="center">
+        <tr>
+          <td><label id="evolvedHeroInfo" ></label></td>
+        </tr>
+      </table>
+      <table class="table table-striped">
         <thead>
             <tr>
               <th>Name</th>
@@ -18,13 +22,13 @@
         </thead>
         <tbody>
           <!-- Loop through contacts in 'list.components.ts' -->
-          <tr *ngFor="let contact of contacts" [style.background-color] = "getBackgroundRandomColor(1,4)" [style.color] = "getRandomColor(1,4)" [style.font-weight]=100>
-            <td class="herodetail" id="namerow" >{{ contact?.name }}</td>  
-            <td class="herodetail" id="powerrow">{{ contact?.power }}</td>                                         
-            <td class="herodetail" id="strengthrow">{{ contact.stats[0].value }}</td>                                
-            <td class="herodetail" id="intelligencerow">{{ contact.stats[1].value }}</td>                                
-            <td class="herodetail" id="staminarow">{{ contact.stats[2].value }}</td>                                
-            <td><button class="editbtn" (click)="Evolve();">Evolve</button></td>  
+          <tr *ngFor="let hero of heroes" [style.background-color] = "getBackgroundRandomColor(1,4)" [style.color] = "getRandomColor(1,4)" [style.font-weight]=100>
+            <td class="herodetail" id="namerow" >{{ hero?.name }}</td>  
+            <td class="herodetail" id="powerrow">{{ hero?.power }}</td>                                         
+            <td *ngFor="let stat of hero.stats">  <!--Did not want to put a for loop inside another, but did it for now  -->
+              {{stat.value}}
+            </td>                    
+            <td><button class="editbtn" (click)=EvolveHero(hero)>Evolve</button></td>  
           </tr>
         </tbody>
       </table>
