--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,5 +1,5 @@
-frontend:
-<ol>
+<!--frontend:-->
+<!--<ol>
   <li>create new service called 'api'</li>
   <li>add 1 method to service to get the contacts from the api located at 'http://localhost:4201/heroes'</li>
   <li>create new component named 'list'</li>
@@ -7,4 +7,7 @@ frontend:
   <li>display the list on the frontend.</li>
   <li>There should be a heading (h2) with the title 'Tour of Heroes'.</li>
 </ol>
-<router-outlet></router-outlet>
+<h3>sdsd</h3>-->
+<!--<router-outlet></router-outlet>-->
+
+<app-list></app-list>
