--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -7,7 +7,7 @@
   </thead>
   <tbody>
     <tr></tr>
-    <tr *ngFor="let contact of contacts">
+    <tr *ngFor="let hero of heroes">
       <td>{{hero.name}}</td>
       <td>{{hero.power}}</td>      
       <td><table><tr *ngFor="let stat of hero.stats"><td>{{hero.key}} : {{hero.value}}</td></tr></table></td>
