--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -7,4 +7,9 @@ frontend:
   <li>display the list on the frontend.</li>
   <li>There should be a heading (h2) with the title 'Tour of Heroes'.</li>
 </ol>
+
+<button class="btn btn-primary" (click)="showList()">
+  Show list
+</button>
+
 <router-outlet></router-outlet>
