--- a/FrontEnd/src/app/components/list/list.component.html
+++ b/FrontEnd/src/app/components/list/list.component.html
@@ -1,20 +1,13 @@
 <div class="container custom-container-2">
-
-  <!-- Show it when there is no hero -->
-  <!-- <div class="no-data text-center" *ngIf="Hero.length == 0">
-    <p>There is no hero available!</p>
-  </div> -->
-
-  <!-- Heroes list table, it hides when there is no hero -->
   <div *ngIf="Hero.length !== 0">
     <h2 class="heading">Tour of Heroes</h2>
     <div *ngIf="showHeroUpdate" class="col-md-12">
-      <p class="red-color bg-color">Name: {{hero.name}}</p>
-      <p class="red-color bg-color">Power: {{hero.power}}</p>
-      <h6 class="red-color">Stats</h6>
-      <p class="red-color">Strength: {{hero.stats[0].value}}</p>
-      <p class="red-color">Intelligence: {{hero.stats[1].value}}</p>
-      <p class="red-color">stamina: {{hero.stats[2].value}}</p>
+      <p class="red-color name">Name: {{hero.name}}</p>
+      <p class="red-color power">Power: {{hero.power}}</p>
+      <h6 class="red-color stats">Stats</h6>
+      <p class="red-color stats-value">Strength: {{hero.stats[0].value}}</p>
+      <p class="red-color stats-value">Intelligence: {{hero.stats[1].value}}</p>
+      <p class="red-color stats-value">stamina: {{hero.stats[2].value}}</p>
     </div>
     <div class="col-md-12">
       <table class="table table-bordered" style="width:100%">
