--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -1,1 +1,63 @@
 /* You can add global styles to this file, and also import other style files */
+.heading {
+    text-align: center;
+    color: blue;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+.bold {
+    font-style: normal;
+    font-size: 20px;
+    font-weight: 800;
+    color: rgba(255, 145, 0, 0.459);
+}
+
+  p {
+    text-align: center;
+    font-style: italic;
+    font-weight: 800;
+    color: rgb(255, 0, 106);
+  }
+
+th {
+    text-align: left;
+  }
+
+td {
+    vertical-align: top;
+  }
+
+.style-0 {
+    color: purple;
+    font-weight: 100;
+    font-size: 20px;
+    background-color: rgb(255, 240, 248);
+}
+
+.style-1 {
+    color: red;
+    font-weight: 200;
+    font-size: 30px;
+    background-color: aliceblue;
+}
+
+.style-2 {
+    color: rgb(68, 0, 255);
+    font-weight: 300;
+    font-size: 35px;
+    background-color: #ecd6d6;
+}
+
+.style-3 {
+    color: green;
+    font-weight: 400;
+    font-size: 40px;
+    background-color: rgb(255, 253, 240);
+}
+
+
+
