--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -5,9 +5,8 @@
 }
 
 .center {
-    margin-left: auto;
-    margin-right: auto;
-  }
+    text-align: center;
+}
 
 .bold {
     font-style: normal;
@@ -21,14 +20,6 @@
     font-style: italic;
     font-weight: 800;
     color: rgb(255, 0, 106);
-  }
-
-th {
-    text-align: left;
-  }
-
-td {
-    vertical-align: top;
   }
 
 .style-0 {
@@ -59,5 +50,67 @@ td {
     background-color: rgb(255, 253, 240);
 }
 
+/*  TABLE */
 
+#heros {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #heros td, #heros th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+  }
+  
+  #heros tr:nth-child(even){background-color: #f2f2f2;}
+  
+  #heros tr:hover {background-color: #ddd;}
+  
+  #heros th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
+  }
+
+/* BUTTONS */
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+
+  .button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4CAF50;
+  }
+
+  .button1:hover {
+    background-color: #4CAF50;
+    color: white;
+  }
+
+.button2 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+  }
+  
+  .button2:hover {
+    background-color: #008CBA;
+    color: white;
+  }
 
