Aded application heading

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="list-container">
+<h2 class="heading">Tour of Heroes</h2>
+<div class="list-container ">
     <app-list></app-list>
 </div>
 <router-outlet></router-outlet>
