--- a/FrontEnd/src/app/list/list.component.scss
+++ b/FrontEnd/src/app/list/list.component.scss
@@ -12,6 +12,11 @@
     src: url(https://fonts.gstatic.com/s/opensans/v16/mem5YaGs126MiZpBA-UN7rgOUuhs.ttf) format('truetype');
 }
 
+.update-info {
+    height: 40px;
+    text-align: center;
+}
+
 .list {
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
     -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
