Added cool fade animation

--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="update-info">
-    <span *ngIf="updatedHero != undefined">
+    <span *ngIf="updatedHero != undefined" [ngClass]="(showStatsUpdate)?'fade-in':'fade-out'">
         <b>{{ updatedHero.name }} </b> updated with <b>Srength:</b> {{ updatedHero.stats[0].value }}, <b>Intelligence:</b> {{ updatedHero.stats[1].value }}, <b>Stamina:</b> {{ updatedHero.stats[2].value }} 
     </span>
 </div>
