--- a/FrontEnd/src/app/list/list.component.scss
+++ b/FrontEnd/src/app/list/list.component.scss
@@ -17,6 +17,34 @@
     text-align: center;
 }
 
+.fade-in {
+    animation: fade 0.5s ease-in;
+}
+
+.fade-out {
+    animation: fadeOut 1s ease-in;
+    opacity: 0;
+    ;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0
+    }
+    100% {
+        opacity: 1
+    }
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 0
+    }
+    0% {
+        opacity: 1
+    }
+}
+
 .list {
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
     -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
