implemented 4 randomized color classes

--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -3,7 +3,7 @@
         <b>{{ updatedHero.name }} </b> updated with <b>Srength:</b> {{ updatedHero.stats[0].value }}, <b>Intelligence:</b> {{ updatedHero.stats[1].value }}, <b>Stamina:</b> {{ updatedHero.stats[2].value }} 
     </span>
 </div>
-<table class="list" cellspacing=0>
+<table cellspacing=0 [ngClass]="'list '+currentColorClass">
     <tr class="header-row">
         <th>name</th>
         <th>power</th>
