--- a/FrontEnd/src/app/list/list.component.scss
+++ b/FrontEnd/src/app/list/list.component.scss
@@ -1,22 +1,113 @@
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: normal;
-    src: url(https://fonts.gstatic.com/s/opensans/v16/mem8YaGs126MiZpBA-UFVZ0e.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: bold;
-    src: url(https://fonts.gstatic.com/s/opensans/v16/mem5YaGs126MiZpBA-UN7rgOUuhs.ttf) format('truetype');
-}
-
+// @font-face {
+//     font-family: 'Open Sans';
+//     font-style: normal;
+//     font-weight: normal;
+//     src: url(https://fonts.gstatic.com/s/opensans/v16/mem8YaGs126MiZpBA-UFVZ0e.ttf) format('truetype');
+// }
+// @font-face {
+//     font-family: 'Open Sans';
+//     font-style: normal;
+//     font-weight: bold;
+//     src: url(https://fonts.gstatic.com/s/opensans/v16/mem5YaGs126MiZpBA-UN7rgOUuhs.ttf) format('truetype');
+// }
+// @font-face {
+//     font-family: 'Open Sans';
+//     font-style: normal;
+//     font-weight: lighter;
+//     src: url(https://fonts.gstatic.com/s/opensans/v16/mem5YaGs126MiZpBA-UN7rgOUuhs.ttf) format('truetype');
+// }
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900');
 .update-info {
     height: 40px;
     text-align: center;
 }
 
+.list {
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
+    -moz-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
+    .header-row {
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+    tr {
+        th {
+            text-transform: uppercase;
+            padding: 10px 20px;
+            text-align: center;
+            border: none;
+            // font-weight: bold;
+        }
+        td {
+            padding: 10px 20px;
+            text-align: center;
+        }
+        th,
+        td {
+            font-family: 'Open Sans';
+        }
+    }
+}
+
+// Our 4 random Color CLasses
+.oceanic-teal {
+    background: #2dbecf;
+    th,
+    td {
+        color: white;
+    }
+    th {
+        font-weight: 900;
+    }
+    td {
+        font-weight: 100;
+    }
+}
+
+.ember-red {
+    background: #cf4e2d;
+    th,
+    td {
+        color: white;
+    }
+    th {
+        font-weight: 500;
+    }
+    td {
+        font-weight: 100;
+    }
+}
+
+.emerald-green {
+    background: #68c944;
+    th,
+    td {
+        color: white;
+    }
+    th {
+        font-weight: 100;
+    }
+    td {
+        font-weight: 500;
+    }
+}
+
+.galactic-purple {
+    background: #732dcf;
+    th,
+    td {
+        color: white;
+    }
+    th {
+        font-weight: 900;
+    }
+    td {
+        font-weight: 900;
+    }
+}
+
+// 4 Color related classes 
+// Extra Additions - Fade Animation
 .fade-in {
     animation: fade 0.5s ease-in;
 }
@@ -42,37 +133,5 @@
     }
     0% {
         opacity: 1
-    }
-}
-
-.list {
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
-    -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
-    -moz-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.09);
-    .header-row {
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-    }
-    tr {
-        th {
-            text-transform: uppercase;
-            padding: 10px 20px;
-            text-align: center;
-            border: none;
-            color: white;
-            background-color: #44a5b0;
-            box-shadow: 0px 0px 1px 1px #44a5b0;
-            -webkit-box-shadow: 0px 0px 1px 1px #44a5b0;
-            -moz-box-shadow: 0px 0px 1px 1px #44a5b0;
-            font-weight: bold;
-        }
-        td {
-            padding: 10px 20px;
-            text-align: center;
-        }
-        th,
-        td {
-            font-family: 'Open Sans';
-        }
     }
 }
