--- a/FrontEnd/src/app/list/list.component.scss
+++ b/FrontEnd/src/app/list/list.component.scss
@@ -41,6 +41,21 @@
         td {
             padding: 10px 20px;
             text-align: center;
+            button {
+                background: transparent;
+                color: white;
+                border: 1px solid white;
+                padding: 5px 10px;
+                border-radius: 10px;
+                transition: 0.4s;
+                font-weight: 600;
+                text-transform: uppercase;
+            }
+            button:hover {
+                background: rgba(255, 255, 255, 0.9);
+                transition: 0.4s;
+                color: black
+            }
         }
         th,
         td {
