--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -15,9 +15,9 @@
     <tr *ngFor="let hero of heroes">
         <td>{{ hero.name }}</td>
         <td>{{ hero.power }}</td>
-        <td>{{ hero.stats[0].value }}</td>
-        <td>{{ hero.stats[1].value }}</td>
-        <td>{{ hero.stats[2].value }}</td>
+        <td>{{ findStat(hero.stats, "strength") }}</td>
+        <td>{{ findStat(hero.stats, "intelligence") }}</td>
+        <td>{{ findStat(hero.stats, "stamina") }}</td>
         <td><button (click)="evolveHero(hero.name)">Evolve</button></td>
     </tr>
 </table>
