--- a/FrontEnd/src/app/components/list/list.component.html
+++ b/FrontEnd/src/app/components/list/list.component.html
@@ -2,17 +2,22 @@
     <table>
         <thead>
             <tr>
-               <th>
+               <th rowspan="2">
                 Name
                </th>
-               <th>
+               <th rowspan="2">
                 Power
                </th>
+               <th colspan="3">
+                Statistics
+               </th>
+            </tr>
+            <tr>   
                <th>
                 Strength
                </th>
                <th>
-                Iintelligence
+                Intelligence
                </th>
                <th>
                 Stamina
@@ -21,10 +26,23 @@
                  
                </th>     
             </tr>
+
         </thead>
         <tbody>
+            <tr *ngIf="myDataList.length == 0">
+                <td colspan="12" class="text-center">
+                        No Contact Listed
+                </td>
+              </tr>
             <tr>
-                <td>
+                <td *ngFor="let list of myDataList; let i=index">
+                    <td>{{i+1}}</td>
+                    <td>{{list.Name}}</td>
+                    <td>{{list.Power}}</td>
+                    <td>{{list.Strength}}</td>
+                    <td>{{list.Intelligence}}</td>
+                    <td>{{list.Stamina}}</td>
+                    
 
                 </td>
             </tr>
