Couple of changes

--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -2,7 +2,7 @@
 <h2 class="heading">Tour of Heroes</h2>
 <div [hidden]="!heroUpdated" class="card">
     <li *ngFor="let x of hero?.stats">
-        {{hero.name}} updated with {{x.key}}({{x.value}})
+        {{hero.name}} updated with {{x.Key}} = ({{x.Value}})
     </li>
 </div>
 <table class="table">
@@ -22,7 +22,7 @@
             {{hero.power}}
         </td>
         <td *ngFor="let stat of hero.stats">
-            {{stat.key}} ({{stat.value}})
+            {{stat.key}} ({{stat.Value}})
         </td>
         <td>
             <button (click)="evolveHero(hero.name)" >Evolve</button>
