--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -1,21 +1,28 @@
 <div>
-    <h2 class="heading">Tour of Heroes</h2>
     <table>
         <thead>
-            <th>Name</th>
-            <th>Power</th>
-            <th>Strength</th>
-            <th>Intelligence</th>
-            <th>Stamina</th>
+            <tr>
+                <th rowspan="2">Name</th>
+                <th rowspan="2">Power</th>
+                <th colspan="3">Statistics</th>
+            </tr>
+            <tr>
+                <th>Strength</th>
+                <th>Intelligence</th>
+                <th>Stamina</th>
+                <th>
+                </th>
+            </tr>
+
         </thead>
         <tbody>
-            <tr *ngfor="let h of heroes">
-                <td>{{h.Name}}</td>
-                <td>{{h.Power}}</td>
-                <td>{{h.Strength}}</td>
-                <td>{{h.Intelligence}}</td>
-                <td>{{h.Stamina}}</td>
-                <td><button click='evolveHero()'>Evolve</button></td>
+            <tr *ngFor="let list of myDataList; let i=index">
+                <td>{{i+1}}</td>
+                <td>{{list.Name}}</td>
+                <td>{{list.Power}}</td>
+                <td>{{list.Strength}}</td>
+                <td>{{list.Intelligence}}</td>
+                <td>{{list.Stamina}}</td>
             </tr>
         </tbody>
     </table>
