commit list component update

--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <h2 class="heading">Tour of Heroes</h2>
-</head>
+
 <body>
-  <table class="table table-bordered">
+  <div class="table">
+ <table class="table table-bordered">
     <thead>
       <tr>
         <th scope="col">Name</th>
         <th scope="col">Power</th>
         <th scope="col">Stats (Strength)</th>
-        <th scope="col">Stats (Strength)</th>
-        <th scope="col">Stats (Strength)</th>
+        <th scope="col">Stats (Intelligence)</th>
+        <th scope="col">Stats (Stamina)</th>
         <th scope="col"></th>
       </tr>
     </thead>
@@ -31,5 +29,7 @@
       </tr>
     </tbody>
   </table>
+  </div>
+ 
 </body>
 </html>
