--- a/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/src/app/list/list.component.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <h2 class="heading">Tour of Heroes</h2>
 
-<body>
-  <div class="table">
- <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Power</th>
-        <th scope="col">Stats (Strength)</th>
-        <th scope="col">Stats (Intelligence)</th>
-        <th scope="col">Stats (Stamina)</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let contact of contacts;">
-      <td>{{contact.name}}</td>
-      <td>{{contact.power}}</td>
-      <td>{{contact.stats[0].value}}</td>
-      <td>{{contact.stats[1].value}}</td>
-      <td>{{contact.stats[2].value}}</td>
-      <td>
-        <button (click)="tableUpdated()">evolve</button>
-      </td>
-      </tr>
-    </tbody>
-  </table>
-  </div>
- 
-</body>
+  <body>
+    <div class="table">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Power</th>
+            <th scope="col">Stats (Strength)</th>
+            <th scope="col">Stats (Intelligence)</th>
+            <th scope="col">Stats (Stamina)</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr  class={{getRandomColor2()}} id="root"  *ngFor="let contact of contacts">
+            <td>{{ contact.name }}</td>
+            <td>{{ contact.power }}</td>
+            <td>{{ contact.stats[0].value }}</td>
+            <td>{{ contact.stats[1].value }}</td>
+            <td>{{ contact.stats[2].value }}</td>
+            <td>
+              <button id="evolve"  (click)="tableUpdated()">evolve</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
